<resources>
    <string name="app_name">ComMovProyecto</string>
    <string name="usuarioA">Usuario</string>
    <string name="passwordA">Contraseña</string>
    <string name="passwordM">Contraseña</string>
    <string name="ingresarA">Ingresar</string>
    <string name="ingresarM">Ingresar</string>
    <string name="iniciarmoderadores">Iniciar como Moderadores</string>
    <string name="salasV">Ver Salas</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombreM">Nombre compreto</string>
    <string name="correo">Correo</string>
    <string name="institucion">Institucion</string>
    <string name="buscarM">Nombre del moderador a buscar</string>
    <string name="ConfPswM">Confirmar contraseña</string>
    <string name="horaInicio">Hora de inicio</string>
    <string name="horaFin">Hora de Fin</string>
    <string name="comentario">Escribe aqui</string>
    <string name="correoRemp">Correo del moderador que remplaza</string>
    <string name="Guardar">Guardar</string>
    <string name="areaPri">Seleccione una</string>
    <string name="areaSec">Seleccione otra</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Regresar">Regresar</string>
    <string name="eliminar">Elimina</string>
    <string name="salir">Salir</string>
    <string name="salasMn">MenuSalaras</string>
    <string name="moderadoresMn">MenuModeradores</string>
    <string name="remplazarM">Remplazar Moderador</string>
    <string name="eliminarM">menu elimianar</string>
    <string name="buscarMn">MenuBuscaM</string>
    <string name="altasMn">MenuAltasM</string>
    <string name="eliminarS">MenuEliminarS</string>
    <string name="altasS">MenuAltasS</string>
    <string name="modificaS">MenuModificaS</string>
    <string name="consultasS">MenuConsultaS</string>
    <string name="nombreMR">NombreMRemp</string>
    <string name="passwordMR">ContraseñaMR</string>
    <string name="Guardar1">habilitacasillas</string>
    <string name="Guardar2">habilitacasillas2</string>

    <string name="Selecion1">Area 1</string>
    <string name="Selecion2">Area 2</string>
    <string name="Id">id</string>
    <string name="editar">Editar</string>


</resources>