<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul_02"
    android:padding="15dp"
    tools:context=".EliminaModeradoresActivity">

    <ImageView
        android:id="@+id/imageViewlogemp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoemp" />

    <ImageView
        android:id="@+id/imageViewlogtec"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotec" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="Eliminar Moderadores"
        android:background="@drawable/text_style"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/imageViewlogtec"
        app:layout_constraintStart_toEndOf="@+id/imageViewlogemp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombreM"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/caja_text_style"
        android:gravity="center"
        android:hint="@string/nombreM"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButtonBuscar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreM"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/caja_text_style"
        android:gravity="center"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBuscar"
        tools:ignore="TouchTargetSizeCheck" />


    <Spinner
        android:id="@+id/spinnerAreaPrin"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/caja_text_style"
        android:contentDescription="@string/areaPri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerAreaSec"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/caja_text_style"
        android:contentDescription="@string/areaSec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_style"
        android:text="Area principal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_style"
        android:text="Area secundaria"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAreaPrin" />


    <EditText
        android:id="@+id/editTextInstitucion"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/caja_text_style"
        android:gravity="center"
        android:hint="@string/institucion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAreaSec"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButtonEliminarM"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style"
        android:contentDescription="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonCancelar"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstitucion"
        app:layout_constraintVertical_bias="0.245"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButtonCancelar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/btn_style"
        android:contentDescription="@string/Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstitucion"
        app:layout_constraintVertical_bias="0.219"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>