<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoazul_02"
    android:padding="15dp"
    tools:context=".LoginModeradoresActivity">


    <ImageView
        android:id="@+id/imageViewlogemp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoemp" />

    <ImageView
        android:id="@+id/imageViewlogtec"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotec" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="Inicio Moderdadores"
        android:background="@drawable/text_style"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/imageViewlogtec"
        app:layout_constraintStart_toEndOf="@+id/imageViewlogemp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/caja_text_style"
        android:drawableLeft="@drawable/icon_usu"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/caja_text_style"
        android:drawableLeft="@drawable/con_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/passwordM"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />

    <Button
        android:id="@+id/buttonIngresarM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ingresarM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageButton
        android:id="@+id/imageButtonRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_style"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:contentDescription="@string/Regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</androidx.constraintlayout.widget.ConstraintLayout>