<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/fondoazul_02"
    android:padding="15dp"
    tools:context=".AltasModeradoresActivity">


    <ImageView
        android:id="@+id/imageViewlogemp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoemp" />

    <ImageView
        android:id="@+id/imageViewlogtec"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotec" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_style"
        android:gravity="center"
        android:text="Altas Moderdadores"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewlogtec"
        app:layout_constraintStart_toEndOf="@+id/imageViewlogemp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.187">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextNombreM"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/caja_text_style"
                android:gravity="center"
                android:hint="@string/nombreM"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextCorreo"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/caja_text_style"
                android:gravity="center"
                android:hint="@string/correo"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombreM"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_style"
                android:gravity="center"
                android:text="Area principal"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCorreo"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/caja_text_style"
                android:hint="@string/Selecion1">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txtA1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/caja_text_style"
                    android:inputType="none"></AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/text_style"
                android:gravity="center"
                android:text="Area secundaria"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAreaPrin"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/caja_text_style"
                android:hint="@string/Selecion2">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txtA2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/caja_text_style"
                    android:inputType="none"></AutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/editTextInstitucion"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/caja_text_style"
                android:gravity="center"
                android:hint="@string/institucion"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAreaSec"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextContraseñaM"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/caja_text_style"
                android:gravity="center"
                android:hint="@string/passwordM"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextInstitucion"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/editTextContraseñaM2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/caja_text_style"
                android:gravity="center"
                android:hint="@string/ConfPswM"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextContraseñaM"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonGuardar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="200dp"
                    android:background="@drawable/btn_style"
                    android:contentDescription="@string/Guardar"
                    app:srcCompat="@android:drawable/ic_menu_save"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="677dp" />

                <ImageButton
                    android:id="@+id/imageButtonCancelar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"

                    android:background="@drawable/btn_style"
                    android:contentDescription="@string/Cancelar"
                    app:srcCompat="@android:drawable/btn_dialog"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:layout_editor_absoluteX="267dp"
                    tools:layout_editor_absoluteY="677dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>